# integral

./: .GITIGNORE  .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bitboard.cpp  bitboard.h  bitboard.ixx  board.cpp  board.h  board.ixx  build_all.sh  cmake_install.cmake  comments.bat  configure_cmake.bat  configure_cmake.sh  fen.cpp  fen.h  fen.ixx  integral.nnue  main.cpp  makefile  types.h  types.ixx  yoshie.nnue
preprocess/: CMakeLists.txt  net_processing.cc
shared/: simd.h
shared/nnue/: definitions.h
src/: CMakeCache.txt  Makefile  ascii_logo.h  bitboard.h  board.cpp  board.h  cmake_install.cmake  eval.cpp  eval.h  fen.cpp  fen.h  history.cpp  history.h  integral  integral.cbp  list.h  main.cc  main.cpp  move.cpp  move.h  move_gen.cpp  move_gen.h  move_orderer.cpp  move_orderer.h  move_picker.cpp  move_picker.h  search.cpp  search.h  time_mgmt.cpp  time_mgmt.h  transpo.cpp  transpo.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/.cmake/api/v1/reply/: cache-v2-c9162ecfec2148ce70ea.json  cmakeFiles-v1-350bb6b230d6b44a102d.json  codemodel-v2-1a7a5a6bf84af4159f83.json  index-2024-03-06T22-52-17-0068.json  target-integral-Debug-e4742e620cd42903a7a6.json  toolchains-v1-d7d964c9a0fbef08f1e0.json
src/chess/: bitboard.h  board.cc  board.h  fen.cc  fen.h  move.cc  move.h  move_gen.cc  move_gen.h  uci.cc  uci.h  uci_option.h
src/data_gen/: data_gen.cc  data_gen.h
src/data_gen/format/: binpack.h  fens.h  format.h
src/engine/: eval.cc  eval.h  eval_terms.h  history.cc  history.h  move_picker.cc  move_picker.h  search.cc  search.h  time_mgmt.cc  time_mgmt.h  transpo.cc  transpo.h
src/engine/evaluation/: evaluation.cc  evaluation.h  evaluation_terms.h  pawn_structure_cache.h  terms.h
src/engine/evaluation/nnue/: accumulator.h  arch.h  nnue.cc  nnue.h  sparse.h
src/engine/search/: constants.h  cuckoo.cc  cuckoo.h  move_picker.cc  move_picker.h  search.cc  search.h  stack.cc  stack.h  time_mgmt.cc  time_mgmt.h  transpo.cc  transpo.h
src/engine/search/history/: bonus.h  capture_history.h  continuation_entries.h  continuation_history.h  correction_history.h  counter_moves.h  history.h  non_pawn_history.h  pawn_capture_history.h  pawn_history.h  ply_history.h  prune_history.h  quiet_history.h  root_history.h  tried_history.h
src/engine/search/syzygy/: syzygy.cc  syzygy.h
src/engine/uci/: command.h  option.h  reporter.h  uci.cc  uci.h  uci_option.h
src/magics/: attacks.cc  attacks.cpp  attacks.h  entry.h  magic_finder.cc  magic_finder.cpp  magic_finder.h  precomputed.h
src/tests/: bench_test.cc  perft_test.cc  see_test.cc  tests.h
src/tuner/: spsa.h  tuner.cc  tuner.h
src/utils/: barrier.h  fused.h  hash_table.h  list.h  math.h  multi_array.h  random.h  simd.h  string.h  time.h  types.h  zobrist.cc  zobrist.h
